plugin/global/styles/markmap.css
.md-diagram-panel .plugin-fence-markmap-svg {
    line-height: initial !important;
    user-select: none;
}

.plugin-fence-markmap-svg table {
    margin: 0;
    padding: 0;
}

#plugin-markmap {
    display: flex;
    flex-direction: row;
    transition: all 0.8s ease 0s;
    user-select: none;
    min-width: 120px;
    min-height: 120px;
    border-radius: 8px;
    padding: 0;
}

@media (prefers-color-scheme: dark) {
    #plugin-markmap {
        background: rgba(30, 30, 30, 0.85);
        border: 1px solid rgba(255, 255, 255, 0.1);
        box-shadow: 0 12px 32px rgba(0, 0, 0, 0.4);
    }
}

#plugin-markmap.pinned-window {
    box-shadow: none;
}

#plugin-markmap:not(.pinned-window) .plugin-markmap-header {
    cursor: grab;
}

#plugin-markmap:not(.pinned-window) .plugin-markmap-header:active {
    cursor: grabbing;
}

.plugin-markmap-grip-top {
    position: absolute;
    left: 0;
    bottom: -5px;
    width: 100%;
    height: 10px;
    cursor: ns-resize;
}

.plugin-markmap-grip-right {
    position: absolute;
    top: 0;
    left: -5px;
    width: 10px;
    height: 100%;
    cursor: ew-resize;
}

#plugin-markmap-svg .markmap-node .markmap-foreign:hover {
    outline: ${this.config.NODE_BORDER_WHEN_HOVER};
}

#plugin-markmap-svg .markmap-node:hover {
    cursor: pointer;
}

.plugin-markmap-header {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    max-width: 2em;
}

.plugin-markmap-icon {
    cursor: pointer;
    font-size: 1.2em;
    opacity: 0.6;
    margin: 0 0.4em;
    pointer-events: auto;
}

.plugin-markmap-icon:not([action="resize"]):hover {
    opacity: 1;
    transform: scale(1.2);
}

.plugin-markmap-icon[action="resize"] {
    position: absolute;
    display: flex;
    bottom: 0.2em;
    right: 0.2em;
    margin: 0;
    cursor: nwse-resize;
    font-size: 1em;
}

.plugin-markmap-icon[action="resize"] svg {
    fill: currentColor;
    height: 1em;
    width: 1em;
}

#plugin-markmap-svg {
    flex: 1;
    user-select: none;
    color: currentColor;
    padding: 4px;
}

#plugin-markmap-svg .markmap-foreign {
    line-height: 20px;
}

